--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sails-webpack",
-  "version": "1.0.13",
+  "version": "2.0.0",
   "description": "Webpack asset pipeline hook for Sails",
   "keywords": [
     "sails",
@@ -12,9 +12,8 @@
     "asset pipeline"
   ],
   "dependencies": {
-    "lodash": "^3.10.1",
-    "marlinspike": "^1.0",
-    "webpack": "^1.9.6"
+    "marlinspike": "^1.0.0",
+    "webpack": "2.2.0-rc.3"
   },
   "scripts": {
     "prepublish": "gulp",
@@ -37,15 +36,19 @@
     {
       "name": "Travis Webb",
       "email": "tjwebb@balderdash.io"
+    },
+    {
+      "name": "Jacob Parish",
+      "email": "jacob.parish.1@gmail.com"
     }
   ],
   "devDependencies": {
-    "babel-core": "^6.1.4",
-    "babel-preset-es2015": "^6.1.4",
+    "babel-core": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
+    "gulp-babel": "^6.1.2",
     "mocha": "^2.3.3",
-    "sails": "^0.11.2"
+    "sails": "^0.12.11"
   },
   "sails": {
     "isHook": true,
