--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sails-webpack",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Webpack asset pipeline hook for Sails",
   "keywords": [
     "sails",
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "marlinspike": "^1.0.0",
-    "webpack": "2.2.0-rc.3"
+    "webpack": "2.2.1"
   },
   "scripts": {
     "prepublish": "gulp",
