--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sails-webpack",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "Webpack asset pipeline hook for Sails",
+  "license": "MIT",
   "keywords": [
     "sails",
     "sailsjs",
@@ -11,14 +12,6 @@
     "build",
     "asset pipeline"
   ],
-  "dependencies": {
-    "marlinspike": "^1.0.0",
-    "webpack": "2.2.1"
-  },
-  "scripts": {
-    "prepublish": "gulp",
-    "test": "mocha"
-  },
   "main": "dist/api/hooks/webpack/index.js",
   "repository": {
     "type": "git",
@@ -42,17 +35,28 @@
       "email": "jacob.parish.1@gmail.com"
     }
   ],
+  "dependencies": {
+    "marlinspike": "^1.0.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-preset-es2015": "^6.18.0",
-    "gulp": "^3.9.0",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "mocha": "^2.3.3",
-    "sails": "^0.12.11"
+    "mocha": "^3.4.2",
+    "sails": "^0.12.13",
+    "webpack": "^3.3.0"
+  },
+  "peerDependencies": {
+    "webpack": ">= 1"
+  },
+  "scripts": {
+    "prepublish": "gulp",
+    "test": "mocha",
+    "build": "gulp"
   },
   "sails": {
     "isHook": true,
     "hookName": "webpack"
-  },
-  "license": "MIT"
+  }
 }
